# dslsde

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  config.default.yaml  main.py  pyproject.toml  requirements.txt
engine/: __init__.py  config.py  database.py  disasm.py  function.py  gdt_dump.py  loader.py  model.py  server_state.py  sigs.py
engine/dynamic/: __init__.py  callee.c  cgen.py  container.py  params.py  qemu_runner.py  runner.py  trace.py
src/: array.rs  cfg.rs  cgen.rs  dce.rs  deobfuscate.rs  emit.rs  flow.rs  infer.rs  insn.rs  ir.rs  lib.rs  sigs.rs  ssa.rs  state.rs  structr.rs  switch.rs  trace.rs  typeflow.rs  typeprop.rs  types.rs
tests/: test_dataset.py
