[package]
name = "dslsde-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "dslsde_core"
crate-type = ["cdylib"]

[dependencies]
capstone = "0.14.0"
pyo3 = { version = "0.23", features = ["extension-module"] }
regex-lite = "0.1.9"

[build-dependencies]
cc = "1.0"

[profile.release]
lto = true
codegen-units = 1
